--- a/contact.html
+++ b/contact.html
@@ -30,27 +30,61 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>About Us</h1>
+        <h1>Contact Us</h1>
 
 
     </section>
 
 
-<!-- about us content -->
-    <section class="about-us">
-        <div class="row">
-            <div class="about-col">
-                <h1>We are the best in India</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, earum? Ad dolorum eaque sit ex saepe? Dolor eaque
-                    impedit rem earum magnam, blanditiis, deleniti quidem similique atque iure praesentium non in! Impedit fugit
-                    aliquid neque.</p>
-                <a href="" class="hero-btn red-btn">Explore Now</a>
+    <!-- contact us -->
+
+    <section class="location">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d448519.64390690165!2d77.0220432138011!3d28.56796941946996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cc1e055d148a1%3A0x9f5207f7f0bc8f63!2sNoida%20Institute%20of%20Engineering%20and%20Technology!5e0!3m2!1sen!2sin!4v1665050870388!5m2!1sen!2sin"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
+    <h4 class="cont">Contact us</h4>
+    <br>
+    <section class="contact-us">
+        <div class="column">
+            <div>
+                <i class="fa fa-home"></i>
+                <span>
+                    <h5>IILM Road, Knowledge Part II</h5>
+                    <P>Greater Noida, Uttar Pradesh, IN</P>
+                </span>
             </div>
-            <div class="about-col">
-                <img src="img/back.jpg" alt="">
+            <div>
+                <i class="fa fa-phone"></i>
+                <span>
+                    <h5>+91 0123 456789</h5>
+                    <P>Monday to Saturday, 9AM to 5PM</P>
+                </span>
+            </div>
+            <div>
+                <i class="fa fa-envelope-o"></i>
+                <span>
+                    <h5>info@niet.co.in</h5>
+                    <P>Email us your query</P>
+                </span>
             </div>
         </div>
+        <br>
+        <br>
+        <div class="contact-col">
+            <form action="">
+                <input type="text" placeholder="Enter your name" required>
+                <input type="text" placeholder="Enter your email" required>
+                <input type="text" placeholder="Enter your subject" required>
+                <textarea rows="8" placeholder="message" required></textarea>
+                <button type="submit" class="hero-btn red-btn">Send message</button>
+            </form>
+        </div>
     </section>
+
+    
 
 
     <section class="footer">
