--- a/about.html
+++ b/about.html
@@ -36,14 +36,38 @@
     </section>
 
 
-<!-- about us content -->
+    <!-- about us content -->
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>We are the best in India</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, earum? Ad dolorum eaque sit ex saepe? Dolor eaque
-                    impedit rem earum magnam, blanditiis, deleniti quidem similique atque iure praesentium non in! Impedit fugit
-                    aliquid neque.</p>
+                <h1>About Noida Institute of Engineering and Technology Greater Noida</h1>
+                <p>Noida Institute of Engineering and Technology (NIET), Greater Noida was established by Dr O.P Agarwal
+                    in the year 2001.
+                    The institute is affiliated to AKTU, Lucknow. NIET is accredited by the National Assessment and
+                    Accreditation Council
+                    (NAAC) and National Board of Accreditation (NBA) and is approved by the All India Council for
+                    Technical Education
+                    (AICTE).
+                </p>
+                <p>
+                    NIET offers various undergraduate, postgraduate and diploma courses in multiple disciplines. The
+                    institute has secured
+                    99th position according to the data released by MHRD department of the government of India, ranked
+                    under top 100
+                    engineering colleges of India, 3rd in placements in India by Go Better Magazine, ranked 5th position
+                    in Uttar Pradesh by
+                    Ministry of Human Resource Development rank list, ranked 1st amongst all private engineering
+                    colleges in Delhi NCR
+                    region.
+                </p>
+                <p>
+                    The institute has been rated 5th best institute of Uttar Pradesh by Career Connect Magazine, 5th
+                    best in North India and
+                    19th best in India by Silicon India. NIET is the only institute under Dr A.P.J Abdul Kalam Technical
+                    University to have
+                    an outstanding Robotics Lab in association with Aachen, Germany.
+                </p>
+                <br>
                 <a href="" class="hero-btn red-btn">Explore Now</a>
             </div>
             <div class="about-col">
@@ -55,8 +79,7 @@
 
     <section class="footer">
         <h4>About Us</h4>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptas voluptatum qui neque provident!
-            <br>Quaerat eum aut ipsum qui eaque, voluptas officia?
+        <P>We offer excellence in education, come and join us and get your future ready.
         </P>
 
         <div class="icons">
