--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="img/logo.png"></a>
+            <a href="index.html"><img src="https://www.dialeducation.com/assets/images/college/logo_1614573278.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -72,26 +72,26 @@
 
             </div>
             <div class="blog-right">
-                <h3>Post Categories</h3>
+                <h3>Seat Available</h3>
                 <div>
                     <span>Data Science</span>
-                    <span>28</span>
+                    <span>120</span>
                 </div>
                 <div>
                     <span>Business Analytics</span>
-                    <span>21</span>
+                    <span>60</span>
                 </div>
                 <div>
                     <span>Data Analytics</span>
-                    <span>20</span>
+                    <span>60</span>
                 </div>
                 <div>
                     <span>Full Stack</span>
-                    <span>34</span>
+                    <span>120</span>
                 </div>
                 <div>
                     <span>AI/ML</span>
-                    <span>18</span>
+                    <span>120</span>
                 </div>
             </div>
         </div>
@@ -101,8 +101,7 @@
 
     <section class="footer">
         <h4>About Us</h4>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptas voluptatum qui neque provident!
-            <br>Quaerat eum aut ipsum qui eaque, voluptas officia?
+        <P> We offer excellence in education, come and join us and get your future ready.
         </P>
 
         <div class="icons">
