--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="img/logo.png"></a>
+            <a href="index.html"><img src="https://www.dialeducation.com/assets/images/college/logo_1614573278.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -49,68 +49,94 @@
         <div class="row">
             <div class="course-col">
                 <h3>Under graduation</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, eligendi ducimus. Ratione fugiat
-                    dolor,
-                    numquam animi minima ducimus! Iusto nisi commodi, dolore amet perspiciatis harum eius ipsam
-                    repellendus
-                    asperiores vero.</p>
+                <!-- <a href="https://zollege.in/college/169064-niet-greater-noida/courses-fees?slug=bachelor-of-technology-btech&course_type=Full-Time" target="_blank">B.Tech - 4 Year(s)</a> -->
+                <p>B.Tech - 4 Year(s)</p>
+                <p>B.Tech + M.Tech - 4 Year(s)</p>
+                <p>BCA 3 Year(s)</p>
+                <p>BBA 3 Year(s)</p>
+                </p>
             </div>
             <div class="course-col">
                 <h3>Post graduation</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, eligendi ducimus. Ratione
-                        fugiat dolor,
-                        numquam animi minima ducimus! Iusto nisi commodi, dolore amet perspiciatis harum eius ipsam
-                        repellendus
-                        asperiores vero.</p>
+                <p>MBA - 2 Year(s)</p>
+                <p>M.Tech - 2 Year(s)</p>
+                <p>MCA - 3 Year(s)</p>
+                <p>PGDM - 2 Year(s)</p>
             </div>
             <div class="course-col">
                 <h3>Pharmacy</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, eligendi ducimus. Ratione fugiat
-                    dolor, numquam animi minima ducimus! Iusto nisi commodi, dolore amet perspiciatis harum eius ipsam
-                    repellendus asperiores vero.</p>
+                <p>B.Pharma - 4 Year(s)</p>
+                <p>M.Pharma - 2 Year(s)</p>
+                <p>D.Pharma - 2 Year(s)</p>
+                <a href="https://www.niet.co.in/" target="_blank">khow more courses</a>
             </div>
         </div>
     </section>
+    <br>
+    <br>
     <section class="capmus">
-        <h3>An Autonomous Campus</h3>
-        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam cumque inventore ut minima, distinctio at mollitia voluptate eos qui!/p>
-        
-            <div class="row">
-                <div class="campus-col">
-                    <img src="img/back.jpg" alt="">
-                    <div class="layer">
-                        <h3>Greater Nodia</h3>
-                    </div>
-                </div>
-                <div class="campus-col">
-                    <img src="img/back.jpg" alt="">
-                    <div class="layer">
-                        <h3>Greater Nodia</h3>
-                    </div>
-                </div>
+        <h3>About NIET</h3>
+        <p class="blog-content">Noida Institute of Engineering and Technology (NIET) Greater Noida is a renowned private
+            institution established in 2001.
+            The campus size is spread over an area of 14 acres of land.
+            The college is accredited by National Assessment and Accreditation Council (NAAC). The college is also
+            accredited by the
+            National Board of Accreditation (NBA). Noida Institute of Engineering and Technology is affiliated with Dr.
+            A.P.J.Abdul
+            Kalam Technical University, Lucknow. The mission and vision of the college is to provide quality education
+            by fostering
+            innovation and research and achieve academic excellence. It offers diploma, UG and PG courses in
+            Engineering, Pharmacy, Management and Computer Science. The
+            most popular
+            courses offered by NIET are B.Tech with specializations offered in 8 streams followed by M.Tech with
+            specialization in 7
+            different streams. Admissions to B.Tech courses are based upon rank obtained in UPCET and JEE Main and
+            for M.Tech
+            courses, based on rank obtained in the GATE exam.</p>
 
+        <div class="row">
+            <div class="campus-col">
+                <img src="img/back.jpg" alt="">
+                <div class="layer">
+                    <h3>NIET</h3>
+                </div>
             </div>
+            <div class="campus-col">
+                <img src="img/back.jpg" alt="">
+                <div class="layer">
+                    <h3>Greater Nodia</h3>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <!-------Facilities-------->
-    <section  class="facilities">
+    <section class="facilities">
         <h1>Our facilities</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, consectetur.</p>
+        <p>we offer many facilities to our students and faculty that inculde healthy food in mess as well as in canteen,
+            best infrastructre, comfertable room in hostel for both boys and girls, big library, playground, and many
+            more...
+        </p>
 
         <div class="row">
             <img src="img/library.jpg" alt="">
             <h3>Library</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, at.</p>
+            <p class="para">The libraries at NIET occupy over 14,000 square feet area <br>and provide students access to a vast
+                repository of <br>resources, including books and periodicals.</p>
         </div>
         <div class="row">
             <img src="img/hostel.jpg" alt="">
             <h3>Hostel</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, at.</p>
+            <p class="para">NIET provides completely hygienic separate boys' <br> and girls' hostel accommodation with all standard
+                <br> civic amenities
+            </p>
         </div>
         <div class="row">
             <img src="img/incubator.png" alt="">
             <h3>Incubator</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, at.</p>
+            <p class="para">World class Incubation facility spread over <br>18,000 sq.ft
+                and startup accelerator services for<br> speedy growth</p>
         </div>
     </section>
 
@@ -123,7 +149,7 @@
             <div class="testimonial-col">
                 <img src="img/user1.jpg" alt="">
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima suscipit cum molestiae sequi deleniti. Pariatur eaque minus non ex quis!</p>
+                    <p>Good college with excellent placement cell but infrastructure is not good .</p>
                     <h3>Ranveer Singh</h3>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -135,8 +161,7 @@
             <div class="testimonial-col">
                 <img src="img/user3.jpg" alt="">
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima suscipit cum molestiae sequi deleniti.
-                        Pariatur eaque minus non ex quis!</p>
+                    <p>It is a good college, but have some problems also.</p>
                     <h3>Disha Patani</h3>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -148,8 +173,8 @@
             <div class="testimonial-col">
                 <img src="img/user2.jpg" alt="">
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima suscipit cum molestiae sequi deleniti.
-                        Pariatur eaque minus non ex quis!</p>
+                    <p>Really friendly Faculty and Cooperative. Overall, it is a nice tier-3 college.
+                    </p>
                     <h3>Allu Arjun</h3>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -167,13 +192,14 @@
 
     <section class="cta">
         <h1>Enroll for our various online courses</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
+        <a href="contact.html" class="hero-btn">CONTACT US</a>
     </section>
 
     <!--Footer -->
     <section class="footer">
         <h4>About Us</h4>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptas voluptatum qui neque provident! <br>Quaerat eum aut ipsum qui eaque, voluptas officia?</P>
+        <P> We offer excellence in education, come and join us and get your future ready.
+        </P>
 
         <div class="icons">
             <i class="fa fa-facebook"></i>
