--- a/blog.html
+++ b/blog.html
@@ -30,68 +30,102 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Our Certifications & Online Programns For 2023</h1>
+        <h1>Our Recent Blogs 2023</h1>
+
     </section>
 
     <!------- blog page cntent ------->
 
+    <section>
+        <div class="row">
+            <div class="blog-column"><img class="blog-img" src="/img/B.Tech.jpg" alt="">
+                <p>
+                    B.Tech in Computer Science – One Amongst the most In-demand Streams Today
+                    b.Tech computer science colleges With the emergence of the internet, automation, and data
+                    revolutions,
+                    undoubtedly, Computer Science has become more
+                    demanding among engineering aspirants. However, the recent advancements in this industry have
+                    increased the
+                    demand for
+                    human resources with specialized skills in various sectors in the industry. It has led to the many
+                    specialization
+                    streams in engineering so that students with the relevant skills can grab career opportunities with
+                    higher
+                    salary
+                    packages and better prospects.<br>Today, B.Tech in computer science is in most demand.
+                    Some of the most popular job opportunities in B.Tech, specifically in computer science, are:
+                    <li>Computer Hardware Engineer</li>
+                    <li>Computer Systems Analyst</li>
+                    <li>Web Designer</li>
+                    <li>Web Developer</li>
+                    <li>Software Developers</li>
+                </p>
+            </div>
+            <div class="blog-column"><img class="blog-img" src="/img/cybersec.jpg" alt="">
+                <p>
+                    Growing internet usage, cyber theft, and cybercrimes have created a sense of insecurity among
+                    internet
+                    users. Hence, the
+                    need for cyber security experts is growing to protect computer systems or internet users from
+                    security
+                    vulnerabilities.
+
+                    Organizations and companies of all sizes are hiring cyber-security professionals to create
+                    strategies for
+                    effective
+                    cyber security. Organizations are worried about data theft and paying a lot for trained and expert
+                    cyber
+                    security professionals.
+                    <br>
+                    After completion of a B.Tech degree, a student can go for the below certifications to advance their
+                    career
+                    in cyber
+                    security:
+                    <br>
+                    <li>OSCP-Offensive Security Certified Professional.</li>
+                    <li>CEH-Certified Ethical Hacker</li>
+                    <li>Certified Information Systems Security Professional (CISSP)</li>
+                    <li>CISSP-ISSAP</li>
+                    <li>CISSP-ISSAP</li>
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- youtube content -->
+    
+    <div class="blog-column">
+        <h1>Follow us on youtube</h1>
+        <div class="column">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wDAJD1KkhH0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nf1wBIFt4-k"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen class="frame">
+            </iframe>
+        </div>
+    </div>
+
+
+
+    <!-- msg box -->
+
     <setion class="blog-content">
         <div class="row">
             <div class="blog-left">
-                <img src="img/courses.jpg" alt="">
-                <h2>Our Certifications & Online Programns For 2023</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis aut, culpa sequi a nostrum,
-                    saepe dolore velit nobis doloremque illo officiis earum deleniti laboriosam distinctio eos ipsam
-                    accusamus ut placeat in aspernatur nihil repellendus aliquid pariatur nulla. Magni consequuntur
-                    temporibus esse enim quidem eos necessitatibus veniam, amet in laborum, tempora, totam beatae!
-                    Quibusdam facilis cupiditate ullam harum neque nemo veritatis.
-                </p>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eligendi fugiat ut repellendus dolor
-                    tenetur nihil cupiditate magni necessitatibus beatae eos sequi sed non dignissimos nobis ab
-                    recusandae blanditiis laboriosam reiciendis culpa pariatur provident, doloribus quibusdam
-                    repudiandae! Similique, libero ullam.</p>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eligendi fugiat ut repellendus dolor
-                    tenetur nihil cupiditate magni necessitatibus beatae eos sequi sed non dignissimos nobis ab
-                    recusandae blanditiis laboriosam reiciendis culpa pariatur provident, doloribus quibusdam
-                    repudiandae! Similique, libero ullam.</p>
-
+                <!-- <img src="img/courses.jpg" alt=""> -->
                 <div class="comment-box">
                     <h3>Leave a comment</h3>
                     <form action="" class="comment-form">
                         <input type="text" placeholder="Enter Name">
                         <input type="email" placeholder="Enter Email">
                         <textarea rows="5" placeholder="Your Commit"></textarea>
-                        <button type="submit"  class="hero-btn red-btn">COMMENT</button>
-
+                        <button type="submit" class="hero-btn red-btn">COMMENT</button>
                     </form>
-                </div>
-
-
-
-            </div>
-            <div class="blog-right">
-                <h3>Seat Available</h3>
-                <div>
-                    <span>Data Science</span>
-                    <span>120</span>
-                </div>
-                <div>
-                    <span>Business Analytics</span>
-                    <span>60</span>
-                </div>
-                <div>
-                    <span>Data Analytics</span>
-                    <span>60</span>
-                </div>
-                <div>
-                    <span>Full Stack</span>
-                    <span>120</span>
-                </div>
-                <div>
-                    <span>AI/ML</span>
-                    <span>120</span>
                 </div>
             </div>
         </div>
