--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="img/logo.png"></a>
+            <a href="index.html"><img src="https://www.dialeducation.com/assets/images/college/logo_1614573278.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -35,12 +35,15 @@
 
     </section>
 
-
+    <!----Niet map---->
+    <div class="about-map">
+        <img src="img/nietmap.jpg">
+    </div>
     <!-- about us content -->
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>About Noida Institute of Engineering and Technology Greater Noida</h1>
+                <h1>About Noida Institute of Engineering and Technology (NIET), Greater Noida</h1>
                 <p>Noida Institute of Engineering and Technology (NIET), Greater Noida was established by Dr O.P Agarwal
                     in the year 2001.
                     The institute is affiliated to AKTU, Lucknow. NIET is accredited by the National Assessment and
@@ -68,7 +71,7 @@
                     an outstanding Robotics Lab in association with Aachen, Germany.
                 </p>
                 <br>
-                <a href="" class="hero-btn red-btn">Explore Now</a>
+                <a href="index.html" class="hero-btn red-btn">Explore Now</a>
             </div>
             <div class="about-col">
                 <img src="img/back.jpg" alt="">
