--- a/contact.html
+++ b/contact.html
@@ -52,27 +52,30 @@
             <div>
                 <i class="fa fa-home"></i>
                 <span>
-                    <h5>Plot-19, IILM Road, Knowledge Part II</h5>
-                    <P>Greater Noida, Uttar Pradesh, IN</P>
+                    <h5>NIET, 19, Knowledge Park-II, Institutional Area</h5>
+                    <P>Greater Noida, Uttar Pradesh, IN -201306</P>
                 </span>
             </div>
             <div>
                 <i class="fa fa-phone"></i>
                 <span>
-                    <h5>+91 0123 456789</h5>
-                    <P>Monday to Saturday, 9AM to 5PM</P>
+                    <h5>+91-844 838 4611</h5>
+                    <P>For other Queries</P>
                 </span>
             </div>
             <div>
                 <i class="fa fa-envelope-o"></i>
                 <span>
-                    <h5>info@niet.co.in</h5>
+                    <h5>registrar@niet.co.in <br>
+                        admission@niet.co.in</h5>
                     <P>Email us your query</P>
                 </span>
             </div>
         </div>
         <br>
         <br>
+        <h3>LET'S CONNECT</h3>
+        <p>Fill in the details below and our counselor will get in touch with you at the earliest.</p>
         <div class="contact-col">
             <form action="formhandler.php" method="post">
                 <input type="text" name="name" placeholder="Enter your name" required>
