--- a/course.html
+++ b/course.html
@@ -64,14 +64,26 @@
                 <a href="https://www.niet.co.in/" target="_blank">khow more courses</a>
             </div>
         </div>
+        <br><br><br>
+        <h3>Fees structure of our courses<br></h3>
+        <div class="course-col">
+            <h3>Fee Structure</h3>
+            <p>B.Tech - 5,05,800</p>
+            <p>Integrated B.Tech + M.Tech - 6,23,250</p>
+            <p>MBA - 2,66,220</p>
+            <p>M.Tech - 2,00,500</p>
+            <p>B/Phar - 4,52,100</p>
+            <br>
+        <a href="https://www.niet.co.in/pdf/B.Tech-and-M.Tech-Fee-Structure-2022-23.pdf" target="_blank"><h6>View more</h6></a>
+        </div>
     </section>
     <br>
     <br>
 
     <!------- admission------->
 
-    <h3>Noida Institute of Engineering and Technology Entrance Exams accepted</h4>
     <div class="about-us">
+        <h3>Noida Institute of Engineering and Technology Entrance Exams accepted</h3> <br>
         <p><b>1.</b> Entrance Exams for B.Tech – JEE Mains, CET, UPSEE</p>
         <p><b>2.</b> Entrance Exams for B.Pharm – NEET</p>
         <p><b>3.</b> Entrance Exams for MBA or PGDM - MAT, CAT, CMAT, XAT, SNAP, GMAT</p>
