--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
                 UGC, we design
                 our own curriculum based on the needs and trends in the industry – enabling students for better
                 employment opportunities
-                around the world.<br>Think Placement, Think NIET</p>
-            <a href="" class="hero-btn">Visit us to know more</a>
+                around the world.
+                <br>
+                <I>Think Placement, Think NIET</I>
+                </p>
+            <a href="https://www.niet.co.in/" class="hero-btn" target="_blank">Visit us to know more</a>
         </div>
 
     </section>
@@ -192,8 +195,12 @@
 
     <section class="cta">
         <h1>Enroll for our various online courses</h1>
-        <a href="contact.html" class="hero-btn">CONTACT US</a>
+        <a href="course.html" class="hero-btn">Click here</a>
     </section>
+
+    
+    
+
 
     <!--Footer -->
     <section class="footer">
@@ -202,11 +209,11 @@
         </P>
 
         <div class="icons">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-linkedln"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-telegram"></i>
+            <a href="https://www.facebook.com/NIET.Gr.Noida/"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/niet_grnoida?lang=en"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/school/noida-institute-of-engineering-&-technology/?originalSubdomain=in"><i class="fa fa-linkedln"></i></a>
+            <a href="https://www.instagram.com/nietgreaternoida/?hl=en"><i class="fa fa-instagram"></i></a>
+            <a href=""><i class="fa fa-telegram"></i></a>            
         </div>
         <p>Made with <i class="fa fa-heart-o"></i> by Karan Kanojia</p>
     </section>
