--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <a href="https://www.instagram.com/nietgreaternoida/?hl=en"><i class="fa fa-instagram"></i></a>
             <a href=""><i class="fa fa-telegram"></i></a>            
         </div>
-        <p>Made with <i class="fa fa-heart-o"></i> by Karan Kanojia</p>
+        <p>Made with <i class="fa fa-heart-o"></i>  by <a href="https://github.com/KARANKANOJIA7830">Karan Kanojia</a></p>
     </section>
 
     <script>
