--- a/course.html
+++ b/course.html
@@ -108,7 +108,7 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-telegram"></i>
         </div>
-        <p>Made with <i class="fa fa-heart-o"></i> by Karan Kanojia</p>
+        <p>Made with <i class="fa fa-heart-o"></i> by <a href="https://github.com/KARANKANOJIA7830">Karan Kanojia</a></p>
     </section>
 
 </body>
